[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
dist-name = "asyncio-channel"
module = "asyncio_channel"
author = "ebb29c"
author-email = ""
home-page = "https://github.com/ebb29c/asyncio-channel"
description-file = "description.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython"
]
requires-python = "~=3.7"

[tool.flit.metadata.urls]
Documentation = "https://github.com/ebb29c/asyncio-channel/blob/main/docs/api.md"

[tool.flit.metadata.requires-extra]
test = [
    "pytest ~=5.4",
    "pytest-asyncio ~=0.11",
    "pytest-cov ~=2.8",
    "flake8 ~=3.7"
]

[tool.flit.sdist]
exclude = [
    ".coveragerc",
    ".gitignore",
    ".travis.yml",
    "Makefile",
    "README.md",
    "docs/",
    "examples/",
    "test/"
]
